# transit-reliability

./: .gitignore  LICENSE  README.md  pyproject.toml
apps/api_local/: main.py  run_journey.py
apps/web/: index.html
data/reference/: routes_min.json  stops_min.json
docs/: reliability.md
scripts/: build_reference.py  s3_smoke_test.py  schema.sql
src/transit_app/config/: settings.py
src/transit_app/domain/: models.py
src/transit_app/http/: api_models.py  base.py  requests_client.py
src/transit_app/presenters/: journey_presenter.py
src/transit_app/providers/mbta/: client.py  endpoints.py  mapper.py
src/transit_app/repositories/: reference.py
src/transit_app/services/: eta.py  reliability.py
src/transit_app/storage/: base.py  local.py  s3.py
src/transit_app/use_cases/: journey.py
tests/: test_eta_estimator.py  test_journey_estimator.py  test_mbta_mapper.py  test_reference_repository.py  test_reliability_scorer.py  test_s3_storage.py
