[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "transit-app"
version = "0.0.1"
description = "Real-time transit reliability + ETA web app (MBTA-first)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests",
  "fastapi",
  "uvicorn",
  "pytest",
  "boto3"
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.poetry.dependencies]
python = ">=3.10"
requests = "^2.32"
boto3 = "^1.34"

